<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:background="@color/purple"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/app_name"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
            android:id="@+id/amtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount" />
        <TextView
            android:id="@+id/ast1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:layout_marginLeft="5dp"
            android:text="@string/ast" />
        </LinearLayout>

        <EditText
            android:id="@+id/amtInpt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text="50" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
            android:id="@+id/numTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num_of_pax" />
        <TextView
            android:id="@+id/ast2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:layout_marginLeft="5dp"
            android:text="@string/ast" />
        </LinearLayout>

        <EditText
            android:id="@+id/numInpt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text="3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/svsTg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="svsTg"
                android:textOff="NO SVS"
                android:textOn="SVS" />

            <ToggleButton
                android:id="@+id/gstTg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="gstTg"
                android:textOff="NO GST"
                android:textOn="GST" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/discTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/discount" />
            <TextView
                android:id="@+id/ast3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:layout_marginLeft="5dp"
                android:text="@string/ast" />

            <Switch
                android:id="@+id/swDisc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <EditText
            android:id="@+id/discInpt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:maxLength="3"
            android:inputType="number"
            android:text="0" />

        <RadioGroup
            android:id="@+id/payRdG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/cashRd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/cash" />

            <RadioButton
                android:id="@+id/pnRd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/paynow" />
            <TextView
                android:id="@+id/ast4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:layout_marginLeft="5dp"
                android:text="@string/ast" />

        </RadioGroup>

        <EditText
            android:id="@+id/payNContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            android:maxLength="8"
            android:text="@string/defaultNum" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/splitBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rectangle"
                android:layout_marginRight="5dp"
                android:text="@string/split" />

            <Button
                android:id="@+id/resetBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rectangle"
                android:text="@string/reset" />

        </LinearLayout>

        <TextView
            android:id="@+id/output1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/total_bill"  />

        <TextView
            android:id="@+id/output2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/each_pays" />

    </LinearLayout>


</LinearLayout>